Tue Jun 24 13:30:31  2008  Steve Huston  <shuston@riverace.com>

        * ace/CDR_Stream.h: For ACE_OutputCDR, note that attempting to set a
          specific byte order requires ACE_ENABLE_SWAP_ON_WRITE to have any
          affect. Thanks to Howard Finer for pointing this out.

Tue Jun 24 11:46:41 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/Bytes_Received_Monitor.cpp:
        * ace/Monitor_Control/Packets_Received_Monitor.cpp:
        * ace/Monitor_Control/Bytes_Sent_Monitor.cpp:
        * ace/Monitor_Control/Packets_Sent_Monitor.cpp:
        
          For Solaris and *BSD WChar builds, ACE_TEXT-ified the argument
          in the call to the platform-specific base class
          constructor.

Tue Jun 24 11:02:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Svc_Conf_Token_Table.h:

          commit generated 3rd file.
          Fix the dependancies for FC6_Compact_NoInline build.

Tue Jun 24 09:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_2980_Regression_Test.cpp:
        * tests/tests.mpc:

          Manually add the ACE_TMAIN code to this test.

Tue Jun 24 00:03:27 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Monitor_Control/BSD_Network_Interface_Monitor.cpp:
        * ace/Monitor_Control/BSD_Network_Interface_Monitor.h:

          Changed to fetch current value in constructor, and subtract 
          that from subsequent values in each update() call.
        
Mon Jun 23 15:28:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Svc_Conf_y.cpp:

          Fix fuzz errors incorrect ACE_TMAIN/main use; commit generated 2nd.

Mon Jun 23 15:27:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Svc_Conf.y:

          Fix fuzz errors incorrect ACE_TMAIN/main use; commit source 1st.

Mon Jun 23 13:51:23 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/Windows_Monitor.h:
        